--- a/slides/mission.html
+++ b/slides/mission.html
@@ -1,5 +1,9 @@
 <header>Миссия &laquo;Оживить окружность&raquo;</header>
 <section>
+  <ul class="bullets">
+    <li>Возможность менять радиус</li>
+    <li>Возможность менять цвет</li>
+  </ul>
   <svg width="400" height="400">
     <defs>
       <marker id="closedArrow" viewBox="0 0 20 20" refX="10" refY="5" markerWidth="10"
