Work in progress

--- a/slides/escape-ways.html
+++ b/slides/escape-ways.html
@@ -3,14 +3,14 @@
   <h1>jQuery/MooTools/Prototype</h1>
   <ul>
     <li>Позволяют забыть о зоопарке браузеров</li>
-    <li>Расширяею возможности браузеров</li>
+    <li>Расширяет возможности браузеров</li>
     <li>Не помогают решить проблему лапшекода</li>
   </ul>
   <h1>MVC</h1>
   <ul>
     <li>Старейший архитектурный шаблон</li>
     <li>Множество реализаций</li>
-    <li>Подходит для Stateless Stateful приложений</li>
+    <li>Подходит для Stateless и Stateful приложений</li>
   </ul>
   <h1>MVVM</h1>
   <ul>
@@ -18,5 +18,4 @@
     <li>Мало реализаций</li>
     <li>Заточен для Stateful приложений</li>
   </ul>
-
 </section>
