--- a/slides/knockoutjs.html
+++ b/slides/knockoutjs.html
@@ -2,6 +2,7 @@
 <section>
   <ul class="bullets">
     <li>Декларативное связывание</li>
+    <li>Автоматическое обновление UI</li>
     <li>Отслеживание зависимостей</li>
     <li>Templaiting</li>
     <li>Совместимость с любым JavaScript framework’ом</li>
