--- a/slides/debriefing.html
+++ b/slides/debriefing.html
@@ -8,8 +8,8 @@ radiusField.onchange = function () {
 }
 
 colorField.onchange = function () {
-  var color = colorField.value;
-  circle.setAttribute('stroke', color);
+  var c = colorField.value;
+  circle.setAttribute('stroke', c);
 }
 <b>
 circle.onresize = function (r) {
