--- a/slides/escape-ways.html
+++ b/slides/escape-ways.html
@@ -1,19 +1,19 @@
 <header>Пути выхода из кризиса</header>
 <section>
   <h1>jQuery/MooTools/Prototype</h1>
-  <ul>
+  <ul class="bullets small">
     <li>Позволяют забыть о зоопарке браузеров</li>
-    <li>Расширяет возможности браузеров</li>
+    <li>Расширяют возможности браузеров</li>
     <li>Не помогают решить проблему лапшекода</li>
   </ul>
   <h1>MVC</h1>
-  <ul>
-    <li>Старейший архитектурный шаблон</li>
+  <ul class="bullets small">
+    <li>Наверное старейший архитектурный шаблон</li>
     <li>Множество реализаций</li>
     <li>Подходит для Stateless и Stateful приложений</li>
   </ul>
   <h1>MVVM</h1>
-  <ul>
+  <ul class="bullets small">
     <li>Молодой</li>
     <li>Мало реализаций</li>
     <li>Заточен для Stateful приложений</li>
