--- a/slides/mission-possible-code.html
+++ b/slides/mission-possible-code.html
@@ -3,9 +3,9 @@
     <pre class="code-left" class="prettyprint">
 <small>
 var
-  circle = document.getElementById('circle'),
-  radiusField = document.getElementById('radius'),
-  colorField = document.getElementById('color');
+  circle = doc.byId('circle'),
+  radiusField = doc.byId('radius'),
+  colorField = doc.byId('color');
 </small>
 
 radiusField.onchange = function () {
