--- a/slides/mission-possible.html
+++ b/slides/mission-possible.html
@@ -8,7 +8,7 @@
               cy="105"
               r="50"
               stroke="red"
-              fill="transparent"/>
+              fill="transparent" class="donotresize"/>
     </svg>
     <div class="controls">
       Radius:
