--- a/slides/mission2.html
+++ b/slides/mission2.html
@@ -16,7 +16,7 @@
       <input type="range" min="10" max="100" step="1" id="radius2" value="50"/><br/>
       Color:
       <input type="text" id="color2" value="red"/><br/>
-      Radius is <label id="radiusLabel2">50px</label>
+      Radius is <span id="radiusLabel2">50px</span>
     </div>
   </div>
   <ul class="bullets">
