--- a/slides/mvvm.html
+++ b/slides/mvvm.html
@@ -9,6 +9,7 @@
       <li>Radius</li>
       <li>Color</li>
       <li>SetRandomColor</li>
+      <li>SetRadius</li>
     </ul>
   </div>
   <div style="float: right; margin-right: 50px;">
@@ -20,8 +21,7 @@
     cy="105"
     r="<b>ViewModel.Radius</b>"
     onclick="<b>ViewModel.SetRandomColor</b>"
-    onresize="<b>ViewModel.Radius</b>"
-    stroke="red"
+    onresize="<b>ViewModel.SetRadius</b>"
     fill="transparent" /&gt;
 &lt;/svg&gt;
 
