--- a/disclaimer.html
+++ b/disclaimer.html
@@ -9,16 +9,16 @@
 <body>
 <div>
 <p>
-  <a href="/">This presentation</a> was created by <strong>Marcin Wichary</strong> and modified by many people in the <em>Google Chrome team</em>
+  <a href="/">Эта презентация</a> создана <strong>Гомолко Романом</strong> во время подготовки к <a href="http://yiiconf.ru">YiiConf</a>.
 </p>
 <p>
-  The purpose of the presentation is to show the coming bleeding edge features for modern desktop and mobile browsers.
+  Цель презентации показать основные возможности KnockoutJS для популяризации этой библиотеки.
 </p>
 <p>
-  The presentation was originally meant to run in <strong>Google Chrome</strong>. Some experimental features <strong>might or might not</strong> be coded to run in other browsers for now. (Although you will cry out of happiness when you see so much running in IE with the Chrome Frame plug-in)
+  Презентация создана на основе <a href="http://slides.html5rocks.com/">slides.html5rocks.com</a> по этому лучше всего работает в <strong>Google Chrome</strong>.
 </p>
 <p>
-  If you want to run 100% of the demos contained in the presentation you might need to run <a href="http://www.chromium.org/getting-involved/dev-channel">Developer Channel Chrome</a> or <a href="http://tools.google.com/dlpage/chromesxs">Google Chrome Canary</a> (on Windows).
+  Исходные коды этой презентации открыты сообществу и опубликованы на <a href="">GitHub'e</a>.
 </p>
 <p>
   There is a <a href="http://code.google.com/p/html5rocks/">code repository</a> created specifically for this presentation so you can download the latest version. If you have any feedback or recommendations you can use the <a href="http://code.google.com/p/html5rocks/issues/list">issue tracker</a> of the project. 
