--- a/slides/landing-slide.html
+++ b/slides/landing-slide.html
@@ -1,11 +1,17 @@
 <section class="middle">
   <p>Знакомство с KnockoutJS</p>
 
+
   <p>Нажмите <span id="left-init-key" class="key">&rarr;</span> для начала</p>
 
   <p id="disclaimer-message">Есть проблемы с просмотром призентации? Прочтите <a
           href="disclaimer.html">памятку</a>.
   </p>
+  <address>
+    Гомолко Роман<br />
+    <a href="http://twitter.com/romanych">@romanych</a>
+
+  </address>
 </section>
 <aside class="note">
   <section>
