--- a/slides/mission.html
+++ b/slides/mission.html
@@ -11,8 +11,8 @@
         <path d="M 0 0 L 10 5 L 0 10 z"></path>
       </marker>
     </defs>
-    <circle cx="200" cy="200" stroke="red" r="190" fill="none"/>
-    <circle cx="200" cy="200" stroke="black" r="3" fill="black"/>
+    <circle cx="200" cy="200" stroke="red" r="190" fill="none" class="donotresize"/>
+    <circle cx="200" cy="200" stroke="black" r="3" fill="black" class="donotresize"/>
     <line x1="200" y1="200" x2="334" y2="66" stroke="black" marker-end="url(#closedArrow)"/>
     <text x="250" y="150" dx="20">Radius</text>
     <text x="250" y="20" dx="20">Color</text>
