--- a/slides/title-slide.html
+++ b/slides/title-slide.html
@@ -1,13 +1,8 @@
 <section class="middle">
   <hgroup>
     <h1>
-      KnockoutJS - write less, do more*
+      KnockoutJS
     </h1>
-
-    <h2>
-      UI - это просто.
-    </h2>
+    <h2>UI - это просто</h2>
   </hgroup>
-  <p>*Не имею ничего против jQuery, он позволяет забыть о зоопарке браузеров, но не помогает распутать
-    лапшу нашей архитектуры</p>
 </section>
