Thank you page reorganized, GA turned on

--- a/slides/thank-you.html
+++ b/slides/thank-you.html
@@ -1,5 +1,8 @@
 <header>Спасибо. Вопросы?</header>
 <section class="middle">
+  <a class="ribbon" href="https://github.com/romanych/knockout-rocks" target="_blank" wrc_done="true"><img
+          src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
   <h1>
     Гомолко Роман
   </h1>
@@ -9,7 +12,7 @@
     <a href="http://bit.ly/Mu4Mke">http://slides.knockoutjs.in.ua/</a>
     <br/><br/>
 
-      <img src="https://bitly.com/Mu4Mke.qrcode"/>
+    <img src="https://bitly.com/Mu4Mke.qrcode"/>
 
   </p>
 </section>
