--- a/slides/landing-slide.html
+++ b/slides/landing-slide.html
@@ -4,17 +4,17 @@
 
   <p>Нажмите <span id="left-init-key" class="key">&rarr;</span> для начала</p>
 
-  <p id="disclaimer-message">Есть проблемы с просмотром призентации? Прочтите <a
+  <p id="disclaimer-message">Найкраще смакує у Хромі. Есть проблемы с просмотром призентации? Прочтите <a
           href="disclaimer.html">памятку</a>.
   </p>
-  <address>
+  <p style="text-align: right; padding-right: 100px; padding-top: 30px; font-size: 100%; line-height: 30px;">
     Гомолко Роман<br />
-    <a href="http://twitter.com/romanych">@romanych</a>
-
-  </address>
+    <a href="http://twitter.com/romanych">@romanych</a><br />
+    <a href="mailto:rgomolko@gmail.com">rgomolko@gmail.com</a><br />
+  </p>
 </section>
 <aside class="note">
   <section>
-    Welcome! (This field is for speaker notes and commentary.)
+    Welcome!
   </section>
 </aside>
